--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react-icons": "^4.7.1",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "miragejs": "^0.1.47"
   }
 }
