--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/faker": "^6.6.9",
+    "faker": "^6.6.6",
     "miragejs": "^0.1.47"
   }
 }
